--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <section class="blogs pyr-4 mbr-4">
         <div class="container grid gap-4">
           <h2 class="blogs__heading heading-2 text-center">
-            Our Populor Blogs
+            Our Populor Blogs...
           </h2>
 
           <div class="blogs__content">
